--- a/tex/main.tex
+++ b/tex/main.tex
@@ -23,15 +23,36 @@
 
 \input{structure.tex} % Include the file specifying the document structure and custom commands
 
+% Theorems Format
+\usepackage{amsthm}
+
+\theoremstyle{plain}
+\newtheorem{thm}{Theorem}[section]
+\newtheorem{lem}[thm]{Lemma}
+\newtheorem{prop}[thm]{Proposition}
+\newtheorem*{cor}{Corollary}
+
+\theoremstyle{definition}
+\newtheorem{defn}{Definition}[section]
+\newtheorem{conj}{Conjecture}[section]
+\newtheorem{exmp}{Example}[section]
+
+\theoremstyle{remark}
+\newtheorem*{rem}{Remark}
+\newtheorem*{note}{Note}
+
+% Floor Function
+\newcommand{\floor}[1]{\lfloor #1 \rfloor}
+
 %----------------------------------------------------------------------------------------
-%	ASSIGNMENT INFORMATION
+%	HEADER
 %----------------------------------------------------------------------------------------
 
-\title{PHYS101: Assignment \#2} % Title of the assignment
+\title{CSI 4900: Honours Project Report} % Title of the assignment
 
-\author{Yukiko Amagi\\ \texttt{y.amagi@inabauniversity.jp}} % Author name and email address
+\author{Wei Hu\\ \texttt{whu061@uottawa.ca}} % Author name and email address
 
-\date{University of Inaba --- \today} % University, school and/or department name(s) and a date
+\date{University of Ottawa --- \today} % University, school and/or department name(s) and a date
 
 %----------------------------------------------------------------------------------------
 
@@ -43,59 +64,117 @@
 %	INTRODUCTION
 %----------------------------------------------------------------------------------------
 
-\section*{Introduction} % Unnumbered section
+\section{Introduction} % Unnumbered section
 
-Lorem ipsum dolor sit amet, consectetur adipiscing elit. Praesent porttitor arcu luctus, imperdiet urna iaculis, mattis eros. Pellentesque iaculis odio vel nisl ullamcorper, nec faucibus ipsum molestie. Sed dictum nisl non aliquet porttitor. Etiam vulputate arcu dignissim, finibus sem et, viverra nisl. Aenean luctus congue massa, ut laoreet metus ornare in. Nunc fermentum nisi imperdiet lectus tincidunt vestibulum at ac elit. Nulla mattis nisl eu malesuada suscipit.
+An Erdos-Selfridge-Spencer game consists of an attacker $A$, a defender $D$, and a position $P$. We use $p_{i}$ to represent a piece that is $i$ levels away from the top of the board. In other words, a piece at $p_{0}$, if not destroyed by the defender this turn, will attain tenure and provide a point for the attacker.
 
+\begin{defn}
+Let $v$ be a value function, which maps a level $i$ to a real value representing the value of a $p_{i}$ piece. A value function is represented by an array $(w_{0}, w_{1}, w_{2}, ... , w_{k})$ where:
+\begin{equation*}
+		v(i) = w_{i}.
+\end{equation*}
+\end{defn}
+
+\begin{defn}
+Let $S$ be an array $(a_{0}, a_{1}, a_{2}, ... , a_{k})$ representing a multiset of pieces consisting of $a_{i}$ pieces on the $i$th level. We define the value function applied to $S$ as:
+\begin{equation*}
+	v(S) = \sum_{i = 0}^k a_{i}v(i).
+\end{equation*}
+\end{defn}
+
+A defender would apply its value function to the two sets partitioned by the attackers, and it would destroy the set it deems to be more valuable.
+
+\begin{thm}
+The optimal value function for the defender is:
 % Math equation/formula
 \begin{equation}
-	I = \int_{a}^{b} f(x) \; \text{d}x.
+	v_{*}(i) = \frac{1}{2^{i+1}}.
 \end{equation}
+\end{thm}
 
-Aliquam arcu turpis, ultrices sed luctus ac, vehicula id metus. Morbi eu feugiat velit, et tempus augue. Proin ac mattis tortor. Donec tincidunt, ante rhoncus luctus semper, arcu lorem lobortis justo, nec convallis ante quam quis lectus. Aenean tincidunt sodales massa, et hendrerit tellus mattis ac. Sed non pretium nibh. Donec cursus maximus luctus. Vivamus lobortis eros et massa porta porttitor.
+\subsection{Project Summary}
 
-\begin{info} % Information block
-	This is an interesting piece of information, to which the reader should pay special attention. Fusce varius orci ac magna dapibus porttitor. In tempor leo a neque bibendum sollicitudin. Nulla pretium fermentum nisi, eget sodales magna facilisis eu. Praesent aliquet nulla ut bibendum lacinia. Donec vel mauris vulputate, commodo ligula ut, egestas orci. Suspendisse commodo odio sed hendrerit lobortis. Donec finibus eros erat, vel ornare enim mattis et.
-\end{info}
+We intend to investigate using reinforcement learning to train attackers to exploit the sub-optimality of biased defenders (nearsighted and farsighted).
 
 %----------------------------------------------------------------------------------------
-%	PROBLEM 1
+%	BIASED DEFENDERS
 %----------------------------------------------------------------------------------------
 
-\section{Problem title} % Numbered section
+\section{Biased Defenders} % Numbered section
 
-In hac habitasse platea dictumst. Curabitur mattis elit sit amet justo luctus vestibulum. In hac habitasse platea dictumst. Pellentesque lobortis justo enim, a condimentum massa tempor eu. Ut quis nulla a quam pretium eleifend nec eu nisl. Nam cursus porttitor eros, sed luctus ligula convallis quis. Nam convallis, ligula in auctor euismod, ligula mauris fringilla tellus, et egestas mauris odio eget diam. Praesent sodales in ipsum eu dictum.
+We notice that the optimal value function satisfies this property that $v(i) = 2v(i+1)$. By deviating from this equality, we create sub-optimal defenders with biases that either favour pieces that are closer to the top of the board, or those that are at the bottom, depending on the direction of the inequality.
+
+\begin{defn}
+A nearsighted (myopic) defender is a defender whose value function satisfies the property, for all defined values of $i$:
+\begin{equation}
+	v(i) > 2v(i + 1).
+\end{equation}
+\end{defn}
+
+A nearsighted defender disproportionally values pieces that are close to the top of the board. 
+
+\begin{defn}
+A farsighted defender is a defender whose values function satisfies the property, for all defined values of $i$:
+\begin{equation}
+	v(i) < 2v(i + 1).
+\end{equation}
+\end{defn}
+
+A farsighted defender disproportionally value pieces that are close to the bottom of the board. \\
+
+\begin{thm}
+When playing against an optimal defender, the optimal approach for the attacker is to try to make the value according to $v_{*}$ of the two partitioned sets as close as possible. 
+\end{thm}
+
+In order to maximize the number of pieces tenured, it is sufficient to maximize. at each turn, the value according to $v_{*}$ of the surviving pieces. This idea can be proven in two steps: 
+\begin{enumerate}
+  \item show that against an optimal defender, the best score that can be achieved for starting position $S$ is $\floor{v_{*}(S)}$.
+  \item playing according to \textit{Theorem 2.1} achieves that best score. 
+\end{enumerate}
 
 %------------------------------------------------
 
-\subsection{Theoretical viewpoint}
+\subsection{Nearsighted (Myopic) Defender}
 
-Maecenas consectetur metus at tellus finibus condimentum. Proin arcu lectus, ultrices non tincidunt et, tincidunt ut quam. Integer luctus posuere est, non maximus ante dignissim quis. Nunc a cursus erat. Curabitur suscipit nibh in tincidunt sagittis. Nam malesuada vestibulum quam id gravida. Proin ut dapibus velit. Vestibulum eget quam quis ipsum semper convallis. Duis consectetur nibh ac diam dignissim, id condimentum enim dictum. Nam aliquet ligula eu magna pellentesque, nec sagittis leo lobortis. Aenean tincidunt dignissim egestas. Morbi efficitur risus ante, id tincidunt odio pulvinar vitae.
+\begin{thm}
+To maximize to real value of the surviving pieces on any round against a nearsighted defender, we follow the following algorithm:
+\end{thm}
 
-Curabitur tempus hendrerit nulla. Donec faucibus lobortis nibh pharetra sagittis. Sed magna sem, posuere eget sem vitae, finibus consequat libero. Cras aliquet sagittis erat ut semper. Aenean vel enim ipsum. Fusce ut felis at eros sagittis bibendum mollis lobortis libero. Donec laoreet nisl vel risus lacinia elementum non nec lacus. Nullam luctus, nulla volutpat ultricies ultrices, quam massa placerat augue, ut fringilla urna lectus nec nibh. Vestibulum efficitur condimentum orci a semper. Pellentesque ut metus pretium lacus maximus semper. Sed tellus augue, consectetur rhoncus eleifend vel, imperdiet nec turpis. Nulla ligula ante, malesuada quis orci a, ultricies blandit elit.
+\begin{center}
+	\begin{minipage}{1\linewidth} % Adjust the minipage width to accomodate for the length of algorithm lines
+		\begin{algorithm}[H]
+			\KwIn{a board position $S$, and the value function of a nearsighted defender $v$}  % Algorithm inputs
+			\KwResult{$(S_{1}, S_{2})$, such that $a+b = c + d$} % Algorithm outputs/results
+			\medskip
+			\If{$\vert b\vert > \vert a\vert$}{
+				exchange $a$ and $b$ \;
+			}
+			$c \leftarrow a + b$ \;
+			$z \leftarrow c - a$ \;
+			$d \leftarrow b - z$ \;
+			{\bf return} $(c,d)$ \;
+			\caption{\texttt{Maximizing Real Value Playing Nearsighted Defender}} % Algorithm name
+			\label{alg:nearsighted}   % optional label to refer to
+		\end{algorithm}
+	\end{minipage}
+\end{center}
 
-% Numbered question, with subquestions in an enumerate environment
-\begin{question}
-	Quisque ullamcorper placerat ipsum. Cras nibh. Morbi vel justo vitae lacus tincidunt ultrices. Lorem ipsum dolor sit amet, consectetuer adipiscing elit.
+\begin{proof}
 
-	% Subquestions numbered with letters
-	\begin{enumerate}[(a)]
-		\item Do this.
-		\item Do that.
-		\item Do something else.
-	\end{enumerate}
-\end{question}
+\end{proof}
+
+
 	
 %------------------------------------------------
 
-\subsection{Algorithmic issues}
+\subsection{Farsighted Defender}
 
 In malesuada ullamcorper urna, sed dapibus diam sollicitudin non. Donec elit odio, accumsan ac nisl a, tempor imperdiet eros. Donec porta tortor eu risus consequat, a pharetra tortor tristique. Morbi sit amet laoreet erat. Morbi et luctus diam, quis porta ipsum. Quisque libero dolor, suscipit id facilisis eget, sodales volutpat dolor. Nullam vulputate interdum aliquam. Mauris id convallis erat, ut vehicula neque. Sed auctor nibh et elit fringilla, nec ultricies dui sollicitudin. Vestibulum vestibulum luctus metus venenatis facilisis. Suspendisse iaculis augue at vehicula ornare. Sed vel eros ut velit fermentum porttitor sed sed massa. Fusce venenatis, metus a rutrum sagittis, enim ex maximus velit, id semper nisi velit eu purus.
 
 \begin{center}
-	\begin{minipage}{0.5\linewidth} % Adjust the minipage width to accomodate for the length of algorithm lines
+	\begin{minipage}{1\linewidth} % Adjust the minipage width to accomodate for the length of algorithm lines
 		\begin{algorithm}[H]
-			\KwIn{$(a, b)$, two floating-point numbers}  % Algorithm inputs
+			\KwIn{a board position $P$, and the value function of a nearsighted defender $v$}  % Algorithm inputs
 			\KwResult{$(c, d)$, such that $a+b = c + d$} % Algorithm outputs/results
 			\medskip
 			\If{$\vert b\vert > \vert a\vert$}{
@@ -105,60 +184,62 @@ In malesuada ullamcorper urna, sed dapibus diam sollicitudin non. Donec elit odi
 			$z \leftarrow c - a$ \;
 			$d \leftarrow b - z$ \;
 			{\bf return} $(c,d)$ \;
-			\caption{\texttt{FastTwoSum}} % Algorithm name
-			\label{alg:fastTwoSum}   % optional label to refer to
+			\caption{\texttt{Maximizing Real Value Playing Nearsighted Defender}} % Algorithm name
+			\label{alg:nearsighted}   % optional label to refer to
 		\end{algorithm}
 	\end{minipage}
 \end{center}
 
 Fusce varius orci ac magna dapibus porttitor. In tempor leo a neque bibendum sollicitudin. Nulla pretium fermentum nisi, eget sodales magna facilisis eu. Praesent aliquet nulla ut bibendum lacinia. Donec vel mauris vulputate, commodo ligula ut, egestas orci. Suspendisse commodo odio sed hendrerit lobortis. Donec finibus eros erat, vel ornare enim mattis et.
 
-% Numbered question, with an optional title
-\begin{question}[\itshape (with optional title)]
-	In congue risus leo, in gravida enim viverra id. Donec eros mauris, bibendum vel dui at, tempor commodo augue. In vel lobortis lacus. Nam ornare ullamcorper mauris vel molestie. Maecenas vehicula ornare turpis, vitae fringilla orci consectetur vel. Nam pulvinar justo nec neque egestas tristique. Donec ac dolor at libero congue varius sed vitae lectus. Donec et tristique nulla, sit amet scelerisque orci. Maecenas a vestibulum lectus, vitae gravida nulla. Proin eget volutpat orci. Morbi eu aliquet turpis. Vivamus molestie urna quis tempor tristique. Proin hendrerit sem nec tempor sollicitudin.
-\end{question}
-
 Mauris interdum porttitor fringilla. Proin tincidunt sodales leo at ornare. Donec tempus magna non mauris gravida luctus. Cras vitae arcu vitae mauris eleifend scelerisque. Nam sem sapien, vulputate nec felis eu, blandit convallis risus. Pellentesque sollicitudin venenatis tincidunt. In et ipsum libero. Nullam tempor ligula a massa convallis pellentesque.
-
-%----------------------------------------------------------------------------------------
-%	PROBLEM 2
-%----------------------------------------------------------------------------------------
-
-\section{Implementation}
-
-Proin lobortis efficitur dictum. Pellentesque vitae pharetra eros, quis dignissim magna. Sed tellus leo, semper non vestibulum vel, tincidunt eu mi. Aenean pretium ut velit sed facilisis. Ut placerat urna facilisis dolor suscipit vehicula. Ut ut auctor nunc. Nulla non massa eros. Proin rhoncus arcu odio, eu lobortis metus sollicitudin eu. Duis maximus ex dui, id bibendum diam dignissim id. Aliquam quis lorem lorem. Phasellus sagittis aliquet dolor, vulputate cursus dolor convallis vel. Suspendisse eu tellus feugiat, bibendum lectus quis, fermentum nunc. Nunc euismod condimentum magna nec bibendum. Curabitur elementum nibh eu sem cursus, eu aliquam leo rutrum. Sed bibendum augue sit amet pharetra ullamcorper. Aenean congue sit amet tortor vitae feugiat.
-
-In congue risus leo, in gravida enim viverra id. Donec eros mauris, bibendum vel dui at, tempor commodo augue. In vel lobortis lacus. Nam ornare ullamcorper mauris vel molestie. Maecenas vehicula ornare turpis, vitae fringilla orci consectetur vel. Nam pulvinar justo nec neque egestas tristique. Donec ac dolor at libero congue varius sed vitae lectus. Donec et tristique nulla, sit amet scelerisque orci. Maecenas a vestibulum lectus, vitae gravida nulla. Proin eget volutpat orci. Morbi eu aliquet turpis. Vivamus molestie urna quis tempor tristique. Proin hendrerit sem nec tempor sollicitudin.
-
-% File contents
-\begin{file}[hello.py]
-\begin{lstlisting}[language=Python]
-#! /usr/bin/python
-
-import sys
-sys.stdout.write("Hello World!\n")
-\end{lstlisting}
-\end{file}
-
-Fusce eleifend porttitor arcu, id accumsan elit pharetra eget. Mauris luctus velit sit amet est sodales rhoncus. Donec cursus suscipit justo, sed tristique ipsum fermentum nec. Ut tortor ex, ullamcorper varius congue in, efficitur a tellus. Vivamus ut rutrum nisi. Phasellus sit amet enim efficitur, aliquam nulla id, lacinia mauris. Quisque viverra libero ac magna maximus efficitur. Interdum et malesuada fames ac ante ipsum primis in faucibus. Vestibulum mollis eros in tellus fermentum, vitae tristique justo finibus. Sed quis vehicula nibh. Etiam nulla justo, pellentesque id sapien at, semper aliquam arcu. Integer at commodo arcu. Quisque dapibus ut lacus eget vulputate.
-
-% Command-line "screenshot"
-\begin{commandline}
-	\begin{verbatim}
-		$ chmod +x hello.py
-		$ ./hello.py
-
-		Hello World!
-	\end{verbatim}
-\end{commandline}
-
-Vestibulum sodales orci a nisi interdum tristique. In dictum vehicula dui, eget bibendum purus elementum eu. Pellentesque lobortis mattis mauris, non feugiat dolor vulputate a. Cras porttitor dapibus lacus at pulvinar. Praesent eu nunc et libero porttitor malesuada tempus quis massa. Aenean cursus ipsum a velit ultricies sagittis. Sed non leo ullamcorper, suscipit massa ut, pulvinar erat. Aliquam erat volutpat. Nulla non lacus vitae mi placerat tincidunt et ac diam. Aliquam tincidunt augue sem, ut vestibulum est volutpat eget. Suspendisse potenti. Integer condimentum, risus nec maximus elementum, lacus purus porta arcu, at ultrices diam nisl eget urna. Curabitur sollicitudin diam quis sollicitudin varius. Ut porta erat ornare laoreet euismod. In tincidunt purus dui, nec egestas dui convallis non. In vestibulum ipsum in dictum scelerisque.
-
-% Warning text, with a custom title
-\begin{warn}[Notice:]
-  In congue risus leo, in gravida enim viverra id. Donec eros mauris, bibendum vel dui at, tempor commodo augue. In vel lobortis lacus. Nam ornare ullamcorper mauris vel molestie. Maecenas vehicula ornare turpis, vitae fringilla orci consectetur vel. Nam pulvinar justo nec neque egestas tristique. Donec ac dolor at libero congue varius sed vitae lectus. Donec et tristique nulla, sit amet scelerisque orci. Maecenas a vestibulum lectus, vitae gravida nulla. Proin eget volutpat orci. Morbi eu aliquet turpis. Vivamus molestie urna quis tempor tristique. Proin hendrerit sem nec tempor sollicitudin.
-\end{warn}
 
 %----------------------------------------------------------------------------------------
 
 \end{document}
+
+%----------------------------------------------------------------------------------------
+%	TEMPLATE ELEMENTS
+%----------------------------------------------------------------------------------------
+
+% Numbered question, with subquestions in an enumerate environment
+%\begin{question}
+%	Quisque ullamcorper placerat ipsum. Cras nibh. Morbi vel justo vitae lacus tincidunt ultrices. Lorem ipsum dolor sit amet, consectetuer adipiscing elit.
+%
+%	% Subquestions numbered with letters
+%	\begin{enumerate}[(a)]
+%		\item Do this.
+%		\item Do that.
+%		\item Do something else.
+%	\end{enumerate}
+%\end{question}
+
+% Numbered question, with an optional title
+%\begin{question}[\itshape (with optional title)]
+%	In congue risus leo, in gravida enim viverra id. Donec eros mauris, bibendum vel dui at, tempor commodo augue. In vel lobortis lacus. Nam ornare ullamcorper mauris vel molestie. Maecenas vehicula ornare turpis, vitae fringilla orci consectetur vel. Nam pulvinar justo nec neque egestas tristique. Donec ac dolor at libero congue varius sed vitae lectus. Donec et tristique nulla, sit amet scelerisque orci. Maecenas a vestibulum lectus, vitae gravida nulla. Proin eget volutpat orci. Morbi eu aliquet turpis. Vivamus molestie urna quis tempor tristique. Proin hendrerit sem nec tempor sollicitudin.
+%\end{question}
+
+% File contents
+%\begin{file}[hello.py]
+%\begin{lstlisting}[language=Python]
+%#! /usr/bin/python
+%
+%import sys
+%sys.stdout.write("Hello World!\n")
+%\end{lstlisting}
+%\end{file}
+
+% Warning text, with a custom title
+%\begin{warn}[Notice:]
+%  In congue risus leo, in gravida enim viverra id. Donec eros mauris, bibendum vel dui at, tempor commodo augue. In vel lobortis lacus. Nam ornare ullamcorper mauris vel molestie. Maecenas vehicula ornare turpis, vitae fringilla orci consectetur vel. Nam pulvinar justo nec neque egestas tristique. Donec ac dolor at libero congue varius sed vitae lectus. Donec et tristique nulla, sit amet scelerisque orci. Maecenas a vestibulum lectus, vitae gravida nulla. Proin eget volutpat orci. Morbi eu aliquet turpis. Vivamus molestie urna quis tempor tristique. Proin hendrerit sem nec tempor sollicitudin.
+%\end{warn}
+
+% Command-line "screenshot"
+%\begin{commandline}
+%	\begin{verbatim}
+%		$ chmod +x hello.py
+%		$ ./hello.py
+%
+%		Hello World!
+%	\end{verbatim}
+%\end{commandline}
